fixed overflow issue?

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -3,11 +3,13 @@
 *::after {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   background: var(--bg-color);
   color: var(--text-color);
+  overflow-x: hidden;
 }
 
 .wrapper {
